[package]
name = "activities"
version = "0.1.0"
authors = ["Minioin <minioin@protonmail.com>"]
description = "Activity Streams 2.0 vocabulary."
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "Readme.md"
repository = "https://github.com/minioin/activities/"
keywords = ["activity-streams"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
mime = "0.3.16"
serde = "1.0.106"
isolang = { version = "1.0.0", features = ["serde_serialize"] }
typetag = "0.1.4"
derive_builder = "0.9.0"
serde_json = "1.0.51"